@@ -19,7 +19,10 @@ package org.apache.hadoop.nfs.nfs3.request;
 
 import java.io.IOException;
 
+import org.apache.hadoop.nfs.nfs3.FileHandle;
 import org.apache.hadoop.oncrpc.XDR;
+
+import com.google.common.annotations.VisibleForTesting;
 
 /**
  * READ3 Request
@@ -34,11 +37,25 @@ public class READ3Request extends RequestWithHandle {
     count = xdr.readInt();
   }
 
+  @VisibleForTesting
+  public READ3Request(FileHandle handle, long offset, int count) {
+    super(handle);
+    this.offset = offset;
+    this.count = count;
+  }
+  
   public long getOffset() {
     return this.offset;
   }
   
   public int getCount() {
     return this.count;
+  }
+  
+  @Override
+  public void serialize(XDR xdr) {
+    handle.serialize(xdr);
+    xdr.writeLongAsHyper(offset);
+    xdr.writeInt(count);
   }
 }
